# hw_hacking

./: .gitignore  LICENSE  README.md  image.md  pyproject.toml  telnet.md
IP_Cam/: get_hw_info.py  image.md
IP_Cam/HI3518E/: telnet_Hi3518E.md
IP_Cam/XM530AI/: image_unpack.sh  qemu.sh  u-boot_output.md
IP_Cam/sofia/: links.md  qemu.md  radara_output.md
LCD Screens/: edid.py  rtd2662.md
jtag/: README.md
wireless_node/: README.md  bluetooth.md  zigbee.md
wireless_node/bl_scan/: README.md  scan.py
